# custom-nse-500-historical-data

./: .gitignore  README.md  instructions.md  learning.md  pyproject.toml  start.sh
.github/workflows/: pages.yml
data/: sectors.parquet  state.json
data/actions/: 360ONE.parquet  ABB.parquet  ABDL.parquet  ACC.parquet  ACI.parquet  ACUTAAS.parquet  ADANIENT.parquet  ADANIPORTS.parquet  ADOR.parquet  ADVANIHOTR.parquet  AEGISLOG.parquet  AEROENTER.parquet  AIIL.parquet  AKZOINDIA.parquet  ALICON.parquet  ALIVUS.parquet  ALKYLAMINE.parquet  ALLDIGI.parquet  AMBUJACEM.parquet  ANANDRATHI.parquet  APCOTEXIND.parquet  APTECHT.parquet  APTUS.parquet  ARE&M.parquet  ASHOKLEY.parquet  ASIANPAINT.parquet  ATGL.parquet  ATL.parquet  AVANTEL.parquet  AVG.parquet  AVROIND.parquet  BAJAJ-AUTO.parquet  BAJAJFINSV.parquet  BAJAJHLDNG.parquet  BAJFINANCE.parquet  BALAMINES.parquet  BANKBARODA.parquet  BANKINDIA.parquet  BEML.parquet  BESTAGRO.parquet  (+218 more)
data/derived/: adj_events.parquet  universe_rank.parquet
docs/: _config.json  api.html  index.html  llms.txt  manifest.json  robots.txt  sitemap.xml  stats.json
docs/assets/: browse.js  style.css
docs/browse/: index.html
docs/browse/2005/: index.html
docs/browse/2006/: index.html
docs/browse/2007/: index.html
docs/browse/2008/: index.html
docs/browse/2009/: index.html
docs/browse/2010/: index.html
docs/browse/2011/: index.html
docs/browse/2012/: index.html
docs/browse/2013/: index.html
docs/browse/2014/: index.html
scripts/: build_docs.py
src/nse_universe/: paths.py
tests/: test_smoke.py
(+17 files in other folders)
